--- a/others/99/index.html
+++ b/others/99/index.html
@@ -69,6 +69,9 @@ Q:火星移民的流程是什么？">
 <li><a href=/elements/>编辑帮助</a></li>
 </ul>
 </li>
+<li class=nav-item>
+<a class=nav-link href=/others/>其他</a>
+</li>
 </ul>
 <ul class="social-links list-unstyled list-inline mt-5">
 <li class=list-inline-item><a href=https://facebook.com title=Facebook>
