--- a/index.html
+++ b/index.html
@@ -288,6 +288,30 @@
 </div>
 </article>
 </div>
+<div class="col-xl-4 col-sm-6">
+<article class="card post-card">
+<div class="card-body mb-3">
+<h3 class="h4 mb-2">
+<a class=post-title href=/news/99/ title=震惊！99%的人都不知道，办理火星移民手续时要这么做！男人看了沉默，女人看了流泪.....>震惊！99%的人都不知道，办理火星移民手续时要这么做！男人看了沉默，女人看了流泪.....</a>
+</h3>
+<p class=mb-0>星际移民局驻地球办事处 2078年4月8日
+Q:火星移民和常规移民的区别？
+A:大同小异。但是去火星不要求一定要带护照。
+Q:准备去火星移民 …</p>
+</div>
+<div class=card-footer>
+<ul class="card-meta list-inline mb-0">
+<li class=list-inline-item>
+<span class=text-light>by:</span>
+<a href=/about/ class=card-meta-author>这是新闻</a>
+</li>
+<li class=list-inline-item>
+<span class=card-meta-date>Jan 21, 2022</span>
+</li>
+</ul>
+</div>
+</article>
+</div>
 </div>
 <div class=row>
 <div class=col-12>
