--- a/blogs/post-8/index.html
+++ b/blogs/post-8/index.html
@@ -150,19 +150,6 @@
 <li class=recent-post-item>
 <div class=media>
 <div class="media-body mr-2">
-<h5><a href=/blogs/post-12/>Nemo vel ad consectetur ut eligendi natus aperiam.</a></h5>
-<span class=card-meta>
-<span class=card-meta-date>Jan 02, 2021</span>
-</span>
-</div>
-<a href=/blogs/post-12/ class=recent-post-image>
-<img loading=lazy class="img-fluid rounded-circle" src=/images/post/13.png>
-</a>
-</div>
-</li>
-<li class=recent-post-item>
-<div class=media>
-<div class="media-body mr-2">
 <h5><a href=/news/%E5%9B%9B%E5%A4%A7%E5%95%86%E4%BC%9A%E5%90%88%E5%B9%B6/>四大商会合并</a></h5>
 <span class=card-meta>
 <span class=card-meta-date>Jan 21, 2022</span>
@@ -172,12 +159,24 @@
 </a>
 </div>
 </li>
+<li class=recent-post-item>
+<div class=media>
+<div class="media-body mr-2">
+<h5><a href=/news/%E5%A5%87%E7%82%B9%E5%9F%8E%E7%AE%A1%E7%90%86%E5%B1%80%E6%8F%90%E5%87%BA%E5%BB%BA%E8%AE%AE-%E6%8E%A8%E5%8A%A8%E5%99%A8%E5%AE%98%E5%86%9C%E5%9C%BA%E5%90%88%E6%B3%95%E5%8C%96/>奇点城管理局提出建议，推动器官农场合法化</a></h5>
+<span class=card-meta>
+<span class=card-meta-date>Jan 21, 2022</span>
+</span>
+</div>
+<a href=/news/%E5%A5%87%E7%82%B9%E5%9F%8E%E7%AE%A1%E7%90%86%E5%B1%80%E6%8F%90%E5%87%BA%E5%BB%BA%E8%AE%AE-%E6%8E%A8%E5%8A%A8%E5%99%A8%E5%AE%98%E5%86%9C%E5%9C%BA%E5%90%88%E6%B3%95%E5%8C%96/ class=recent-post-image>
+</a>
+</div>
+</li>
 </ul>
 </div>
 <div class=widget>
 <span class=widget-title>分类</span>
 <ul class="sidebar-post-categories list-unstyled">
-<li><a href=/categories/daily-life>Daily life <span>5</span></a></li>
+<li><a href=/categories/daily-life>Daily life <span>4</span></a></li>
 <li><a href=/categories/design>Design <span>1</span></a></li>
 <li><a href=/categories/lifestyle>Lifestyle <span>4</span></a></li>
 <li><a href=/categories/sports>Sports <span>1</span></a></li>
@@ -251,33 +250,6 @@
 </div>
 <div class="col-lg-4 col-md-4 col-sm-6">
 <article class="card post-card">
-<div class="post-slider slider-sm">
-<div><img loading=lazy class=w-100 src=/images/post/13.png alt></div>
-</div>
-<div class="card-body mb-3">
-<ul class="card-meta-tag list-inline mb-1">
-<li class=list-inline-item><a href=/tags/food>Food</a></li>
-</ul>
-<h3 class="h4 mb-2">
-<a class=post-title href=/blogs/post-12/ title="Nemo vel ad consectetur ut eligendi natus aperiam.">Nemo vel ad consectetur ut eligendi natus aperiam.</a>
-</h3>
-<p class=mb-0>Nemo vel ad consectetur namut rutrum ex, venenatis sollicitudin urna. …</p>
-</div>
-<div class=card-footer>
-<ul class="card-meta list-inline mb-0">
-<li class=list-inline-item>
-<span class=text-light>by:</span>
-<a href=/about/ class=card-meta-author>这是新闻</a>
-</li>
-<li class=list-inline-item>
-<span class=card-meta-date>Jan 02, 2021</span>
-</li>
-</ul>
-</div>
-</article>
-</div>
-<div class="col-lg-4 col-md-4 col-sm-6">
-<article class="card post-card">
 <div class="card-body mb-3">
 <ul class="card-meta-tag list-inline mb-1">
 <li class=list-inline-item><a href=/tags/%E5%9B%BD%E9%99%85%E7%AB%9E%E4%BA%89%E7%BD%91%E7%BB%9Cicn>国际竞争网络(ICN)</a></li>
@@ -294,6 +266,32 @@
 </h3>
 <p class=mb-0>星辰社 2102年6月20日 电
 20日，联合行星（UPI）、宇宙卫星通信组织（Unisat）、联合发射同盟（ULA）、轨道旅游 …</p>
+</div>
+<div class=card-footer>
+<ul class="card-meta list-inline mb-0">
+<li class=list-inline-item>
+<span class=text-light>by:</span>
+<a href=/about/ class=card-meta-author>这是新闻</a>
+</li>
+<li class=list-inline-item>
+<span class=card-meta-date>Jan 21, 2022</span>
+</li>
+</ul>
+</div>
+</article>
+</div>
+<div class="col-lg-4 col-md-4 col-sm-6">
+<article class="card post-card">
+<div class="card-body mb-3">
+<ul class="card-meta-tag list-inline mb-1">
+<li class=list-inline-item><a href=/tags/%E5%99%A8%E5%AE%98%E5%9F%B9%E8%82%B2>器官培育</a></li>
+<li class=list-inline-item><a href=/tags/%E5%A5%87%E7%82%B9%E5%9F%8E>奇点城</a></li>
+</ul>
+<h3 class="h4 mb-2">
+<a class=post-title href=/news/%E5%A5%87%E7%82%B9%E5%9F%8E%E7%AE%A1%E7%90%86%E5%B1%80%E6%8F%90%E5%87%BA%E5%BB%BA%E8%AE%AE-%E6%8E%A8%E5%8A%A8%E5%99%A8%E5%AE%98%E5%86%9C%E5%9C%BA%E5%90%88%E6%B3%95%E5%8C%96/ title=奇点城管理局提出建议，推动器官农场合法化>奇点城管理局提出建议，推动器官农场合法化</a>
+</h3>
+<p class=mb-0>星辰社 火星奇点城 2166年7月11日（火星105年8月16日） 电
+火星时间8月16日（地球7月11日），奇点管理局提出《管理局关于推进 …</p>
 </div>
 <div class=card-footer>
 <ul class="card-meta list-inline mb-0">
