--- a/blogs/post-9/index.html
+++ b/blogs/post-9/index.html
@@ -136,19 +136,6 @@
 <li class=recent-post-item>
 <div class=media>
 <div class="media-body mr-2">
-<h5><a href=/blogs/post-12/>Nemo vel ad consectetur ut eligendi natus aperiam.</a></h5>
-<span class=card-meta>
-<span class=card-meta-date>Jan 02, 2021</span>
-</span>
-</div>
-<a href=/blogs/post-12/ class=recent-post-image>
-<img loading=lazy class="img-fluid rounded-circle" src=/images/post/13.png>
-</a>
-</div>
-</li>
-<li class=recent-post-item>
-<div class=media>
-<div class="media-body mr-2">
 <h5><a href=/news/%E5%9B%9B%E5%A4%A7%E5%95%86%E4%BC%9A%E5%90%88%E5%B9%B6/>四大商会合并</a></h5>
 <span class=card-meta>
 <span class=card-meta-date>Jan 21, 2022</span>
@@ -170,12 +157,24 @@
 </a>
 </div>
 </li>
+<li class=recent-post-item>
+<div class=media>
+<div class="media-body mr-2">
+<h5><a href=/news/%E5%B0%98%E6%9A%B4-%E5%AD%90%E5%8D%88%E7%BA%BF-%E4%BB%8D%E5%9C%A8%E7%BB%A7%E7%BB%AD-%E6%90%9C%E6%95%91%E5%B7%A5%E4%BD%9C%E6%AD%A3%E7%B4%A7%E5%AF%86%E8%BF%9B%E8%A1%8C/>尘暴“子午线”仍在继续，搜救工作正紧密进行</a></h5>
+<span class=card-meta>
+<span class=card-meta-date>Jan 21, 2022</span>
+</span>
+</div>
+<a href=/news/%E5%B0%98%E6%9A%B4-%E5%AD%90%E5%8D%88%E7%BA%BF-%E4%BB%8D%E5%9C%A8%E7%BB%A7%E7%BB%AD-%E6%90%9C%E6%95%91%E5%B7%A5%E4%BD%9C%E6%AD%A3%E7%B4%A7%E5%AF%86%E8%BF%9B%E8%A1%8C/ class=recent-post-image>
+</a>
+</div>
+</li>
 </ul>
 </div>
 <div class=widget>
 <span class=widget-title>分类</span>
 <ul class="sidebar-post-categories list-unstyled">
-<li><a href=/categories/daily-life>Daily life <span>5</span></a></li>
+<li><a href=/categories/daily-life>Daily life <span>4</span></a></li>
 <li><a href=/categories/design>Design <span>1</span></a></li>
 <li><a href=/categories/lifestyle>Lifestyle <span>4</span></a></li>
 <li><a href=/categories/sports>Sports <span>1</span></a></li>
@@ -222,33 +221,6 @@
 </div>
 <div class="col-lg-4 col-md-4 col-sm-6">
 <article class="card post-card">
-<div class="post-slider slider-sm">
-<div><img loading=lazy class=w-100 src=/images/post/13.png alt></div>
-</div>
-<div class="card-body mb-3">
-<ul class="card-meta-tag list-inline mb-1">
-<li class=list-inline-item><a href=/tags/food>Food</a></li>
-</ul>
-<h3 class="h4 mb-2">
-<a class=post-title href=/blogs/post-12/ title="Nemo vel ad consectetur ut eligendi natus aperiam.">Nemo vel ad consectetur ut eligendi natus aperiam.</a>
-</h3>
-<p class=mb-0>Nemo vel ad consectetur namut rutrum ex, venenatis sollicitudin urna. …</p>
-</div>
-<div class=card-footer>
-<ul class="card-meta list-inline mb-0">
-<li class=list-inline-item>
-<span class=text-light>by:</span>
-<a href=/about/ class=card-meta-author>这是新闻</a>
-</li>
-<li class=list-inline-item>
-<span class=card-meta-date>Jan 02, 2021</span>
-</li>
-</ul>
-</div>
-</article>
-</div>
-<div class="col-lg-4 col-md-4 col-sm-6">
-<article class="card post-card">
 <div class="card-body mb-3">
 <ul class="card-meta-tag list-inline mb-1">
 <li class=list-inline-item><a href=/tags/%E5%9B%BD%E9%99%85%E7%AB%9E%E4%BA%89%E7%BD%91%E7%BB%9Cicn>国际竞争网络(ICN)</a></li>
@@ -291,6 +263,34 @@
 </h3>
 <p class=mb-0>星辰社 火星奇点城 2166年7月11日（火星105年8月16日） 电
 火星时间8月16日（地球7月11日），奇点管理局提出《管理局关于推进 …</p>
+</div>
+<div class=card-footer>
+<ul class="card-meta list-inline mb-0">
+<li class=list-inline-item>
+<span class=text-light>by:</span>
+<a href=/about/ class=card-meta-author>这是新闻</a>
+</li>
+<li class=list-inline-item>
+<span class=card-meta-date>Jan 21, 2022</span>
+</li>
+</ul>
+</div>
+</article>
+</div>
+<div class="col-lg-4 col-md-4 col-sm-6">
+<article class="card post-card">
+<div class="card-body mb-3">
+<ul class="card-meta-tag list-inline mb-1">
+<li class=list-inline-item><a href=/tags/%E6%98%9F%E9%99%85%E7%A7%BB%E6%B0%91%E4%B8%AD%E5%BF%83iic>星际移民中心(IIC)</a></li>
+<li class=list-inline-item><a href=/tags/%E8%A7%86%E7%95%8C%E5%9F%8E>视界城</a></li>
+<li class=list-inline-item><a href=/tags/%E5%A5%87%E7%82%B9%E5%9F%8E>奇点城</a></li>
+<li class=list-inline-item><a href=/tags/%E5%B0%98%E6%9A%B4>尘暴</a></li>
+</ul>
+<h3 class="h4 mb-2">
+<a class=post-title href=/news/%E5%B0%98%E6%9A%B4-%E5%AD%90%E5%8D%88%E7%BA%BF-%E4%BB%8D%E5%9C%A8%E7%BB%A7%E7%BB%AD-%E6%90%9C%E6%95%91%E5%B7%A5%E4%BD%9C%E6%AD%A3%E7%B4%A7%E5%AF%86%E8%BF%9B%E8%A1%8C/ title=尘暴“子午线”仍在继续，搜救工作正紧密进行>尘暴“子午线”仍在继续，搜救工作正紧密进行</a>
+</h3>
+<p class=mb-0>星辰社 视界城紧急搜救中心 2156年2月15日（火星99年22月27日） 电
+当地时间22月26日起开始的尘暴“子午线”仍在肆虐。目前，搜 …</p>
 </div>
 <div class=card-footer>
 <ul class="card-meta list-inline mb-0">
