--- a/contact/index.html
+++ b/contact/index.html
@@ -70,7 +70,7 @@
 <li class=list-inline-item><a href=https://instagram.com title=Instagram>
 <i class="fab fa-instagram"></i>
 </a></li>
-<li class=list-inline-item><a href=https://github.com title=Github>
+<li class=list-inline-item><a href=https://github.com/IvyChere/ivychere.github.io/ title=Github>
 <i class="fab fa-github"></i>
 </a></li>
 </ul>
@@ -142,7 +142,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 <li class=list-inline-item><a href=https://instagram.com title=Instagram>
 <i class="icon fab fa-instagram"></i> Instagram
 </a></li>
-<li class=list-inline-item><a href=https://github.com title=Github>
+<li class=list-inline-item><a href=https://github.com/IvyChere/ivychere.github.io/ title=Github>
 <i class="icon fab fa-github"></i> Github
 </a></li>
 </ul>
