--- a/elements/index.html
+++ b/elements/index.html
@@ -70,7 +70,7 @@
 <li class=list-inline-item><a href=https://instagram.com title=Instagram>
 <i class="fab fa-instagram"></i>
 </a></li>
-<li class=list-inline-item><a href=https://github.com title=Github>
+<li class=list-inline-item><a href=https://github.com/IvyChere/ivychere.github.io/ title=Github>
 <i class="fab fa-github"></i>
 </a></li>
 </ul>
@@ -280,7 +280,7 @@ raw Markdown line up prettily. You can also use inline Markdown.</p>
 <li class=list-inline-item><a href=https://instagram.com title=Instagram>
 <i class="icon fab fa-instagram"></i> Instagram
 </a></li>
-<li class=list-inline-item><a href=https://github.com title=Github>
+<li class=list-inline-item><a href=https://github.com/IvyChere/ivychere.github.io/ title=Github>
 <i class="icon fab fa-github"></i> Github
 </a></li>
 </ul>
