--- a/about/index.html
+++ b/about/index.html
@@ -107,7 +107,7 @@
 <h3 id=上层叙事的我们><strong>上层叙事的我们</strong></h3>
 <p>基于[星际移民局](<a href=https://interimm.org title=https://interimm.org>https://interimm.org</a>)的二次创作(´▽｀)</p>
 <p>若无特殊说明，遵守[CC BY-SA 4.0](<a href=https://creativecommons.org/licenses/by-sa/4.0/ title=https://creativecommons.org/licenses/by-sa/4.0/>https://creativecommons.org/licenses/by-sa/4.0/</a>)协议(´･ω･`)</p>
-<p>超级感谢[章鱼喵](<a href=https://github.com/emptymalei title=https://github.com/emptymalei>https://github.com/emptymalei</a>)老师做的Hugo模板，感谢！！！！！！！♪( ´▽｀)</p>
+<p>超级感谢[章鱼喵](<a href=https://github.com/emptymalei title=https://github.com/emptymalei>https://github.com/emptymalei</a>)老师做的Hugo模板，感谢！！！！！！！</p>
 <p>没有Logo就先挂IIA的吧OvO</p>
 <p>我的文笔不行写得很烂文章不分主次毫无逻辑等等等等的真的很抱歉，在学了在学了QAQ</p>
 </div>
