--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 <meta charset=utf-8>
 <title>关于</title>
 <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=5">
-<meta name=description content="这是描述">
+<meta name=description content="俯瞰昆仑，仰望星辰">
 <meta name=author content="我是作者">
 <meta name=generator content="Hugo 0.89.4">
 <link rel="shortcut icon" href=/images/favicon/favicon.ico type=image/x-icon>
