--- a/about/index.html
+++ b/about/index.html
@@ -105,7 +105,7 @@
 <p>主要负责两大太空城与十一大火星城的新闻信息采集、发布。在地球各国（地区）亦设有办事处。</p>
 <p>我们致力于将快速、详细、准确的第一手新闻报道提供给报刊、电视台等各式媒体及新媒体。</p>
 <h3 id=上层叙事的我们><strong>上层叙事的我们</strong></h3>
-<p>基于<a href=https://interimm.org>星际移民局</a>的二次创作(´▽｀)</p>
+<p>基于<a href=https://interimm.org>星际移民局</a>的二次创作</p>
 <p>若无特殊说明，遵守<a href=https://creativecommons.org/licenses/by-sa/4.0/>CC BY-SA 4.0</a>协议(´･ω･`)</p>
 <p>超级感谢<a href=https://github.com/emptymalei>章鱼喵</a>老师做的Hugo模板，感谢！！！！！！！</p>
 <p>（其实应该说整个网站都是老师搭的我就是fork过来了而已XD）</p>
