--- a/archived-news/index.html
+++ b/archived-news/index.html
@@ -10,7 +10,7 @@
 <link rel=icon href=/images/favicon/favicon.ico type=image/x-icon>
 <meta property="og:title" content="新闻归档">
 <meta property="og:description" content="联合小行星垄断行径遭曝光： UAI恐陷入信誉危机 2057.11.22
-https://starspress.org/news/uai/
+联合国决定成立星际移民局
 2062.7.23
 火星移民登记正式对公众开放 2078.4.7
 四大商会合并 2102.6.20
@@ -96,15 +96,15 @@ https://starspress.org/news/uai/
 </div>
 </section></div>
 <div class=content>
-<p><a href=https://starspress.org/news/uai/ title="联合小行星垄断行径遭曝光： UAI恐陷入信誉危机">联合小行星垄断行径遭曝光： UAI恐陷入信誉危机</a> 2057.11.22</p>
-<p><a href=https://starspress.org/news/%E8%81%94%E5%90%88%E5%9B%BD%E5%86%B3%E5%AE%9A%E6%88%90%E7%AB%8B%E6%98%9F%E9%99%85%E7%A7%BB%E6%B0%91%E5%B1%80/ title=联合国决定成立星际移民局>https://starspress.org/news/uai/</a><br>
+<p><a href=https://starspress.org/news/m-571122/ title="联合小行星垄断行径遭曝光： UAI恐陷入信誉危机">联合小行星垄断行径遭曝光： UAI恐陷入信誉危机</a> 2057.11.22</p>
+<p><a href=https://starspress.org/news/m-620723/ title=联合国决定成立星际移民局>联合国决定成立星际移民局</a><br>
 2062.7.23</p>
-<p><a href=http://starspress.wikidot.com/m-780407>火星移民登记正式对公众开放</a> 2078.4.7</p>
-<p><a href=http://starspress.wikidot.com/m-020620>四大商会合并</a> 2102.6.20</p>
-<p><a href=http://starspress.wikidot.com/b-331226>简讯：罗马教宗访问伊希地，并发表演讲</a> 2133.12.26</p>
-<p><a href=http://starspress.wikidot.com/m-560215>尘暴“子午线”仍在继续，搜救工作正紧密进行</a> 2156.2.15</p>
-<p><a href=http://starspress.wikidot.com/m-660711>奇点城管理局提出建议，推动器官农场合法化</a> 2166.7.11</p>
-<p><a href=http://starspress.wikidot.com/m-650713>首届火星奥运会！第152届夏季奥运会及残奥会将在伊希地举办</a> 2493.7.13</p>
+<p><a href=http://starspress.org/news/m-780407>火星移民登记正式对公众开放</a> 2078.4.7</p>
+<p><a href=http://starspress.org/news/m-020620>四大商会合并</a> 2102.6.20</p>
+<p><a href=http://starspress.org/news/b-331226>简讯：罗马教宗访问伊希地，并发表演讲</a> 2133.12.26</p>
+<p><a href=http://starspress.org/news/m-560215>尘暴“子午线”仍在继续，搜救工作正紧密进行</a> 2156.2.15</p>
+<p><a href=http://starspress.org/news/m-660711>奇点城管理局提出建议，推动器官农场合法化</a> 2166.7.11</p>
+<p><a href=http://starspress.org/news/m-650713>首届火星奥运会！第152届夏季奥运会及残奥会将在伊希地举办</a> 2493.7.13</p>
 </div>
 </div>
 </div>
