--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 <li class=list-inline-item><a href=/tags/%E7%81%AB%E6%98%9F%E7%A7%BB%E6%B0%91>火星移民</a></li>
 </ul>
 <h3 class="h4 mb-2">
-<a class=post-title href=/news/99/ title=震惊！99%的人都不知道，办理火星移民手续时要这么做！男人看了沉默，女人看了流泪.....>震惊！99%的人都不知道，办理火星移民手续时要这么做！男人看了沉默，女人看了流泪.....</a>
+<a class=post-title href=/news/iia-q-and-a/ title=震惊！99%的人都不知道，办理火星移民手续时要这么做！男人看了沉默，女人看了流泪.....>震惊！99%的人都不知道，办理火星移民手续时要这么做！男人看了沉默，女人看了流泪.....</a>
 </h3>
 <p class=mb-0>星际移民局驻地球办事处 2078年4月8日
 Q:火星移民和常规移民的区别？
