--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <li class=list-inline-item><a href=/tags/%E8%81%94%E5%90%88%E8%A1%8C%E6%98%9Fupi>联合行星(UPI)</a></li>
 </ul>
 <h3 class="h4 mb-2">
-<a class=post-title href=/news/%E5%9B%9B%E5%A4%A7%E5%95%86%E4%BC%9A%E5%90%88%E5%B9%B6/ title=四大商会合并>四大商会合并</a>
+<a class=post-title href=/news/m-020620/ title=四大商会合并>四大商会合并</a>
 </h3>
 <p class=mb-0>星辰社 2102年6月20日 电
 20日，联合行星（UPI）、宇宙卫星通信组织（Unisat）、联合发射同盟（ULA）、轨道旅游 …</p>
