--- a/privacy/index.html
+++ b/privacy/index.html
@@ -67,7 +67,7 @@
 <i class="fab fa-twitter"></i>
 </a></li>
 <li class=list-inline-item><a href=https://interimm.org title=InterImm>
-<i class=images/InterImm_logo.png></i>
+<i class="fab fa-instagram"></i>
 </a></li>
 <li class=list-inline-item><a href=https://github.com/IvyChere/ivychere.github.io/ title=Github>
 <i class="fab fa-github"></i>
@@ -126,7 +126,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Purus, donec nunc eros,
 <i class="icon fab fa-twitter"></i> Twitter
 </a></li>
 <li class=list-inline-item><a href=https://interimm.org title=InterImm>
-<i class="icon images/InterImm_logo.png"></i> InterImm
+<i class="icon fab fa-instagram"></i> InterImm
 </a></li>
 <li class=list-inline-item><a href=https://github.com/IvyChere/ivychere.github.io/ title=Github>
 <i class="icon fab fa-github"></i> Github
