--- a/archived-news/index.html
+++ b/archived-news/index.html
@@ -85,8 +85,8 @@
 </div>
 </section></div>
 <div class=content>
-<h3 id=点击文章名即可跳转至相关页面>点击文章名即可跳转至相关页面</h3>
-<p><a href=https://starspress.org/news/m-571122/ title="联合小行星垄断行径遭曝光： UAI恐陷入信誉危机">联合小行星垄断行径遭曝光： UAI恐陷入信誉危机</a> 2057.11.22</p>
+<p><strong>点击文章名即可跳转至相关页面</strong>
+<a href=https://starspress.org/news/m-571122/ title="联合小行星垄断行径遭曝光： UAI恐陷入信誉危机">联合小行星垄断行径遭曝光： UAI恐陷入信誉危机</a> 2057.11.22</p>
 <p><a href=https://starspress.org/news/m-620723/ title=联合国决定成立星际移民局>联合国决定成立星际移民局</a> 2062.7.23</p>
 <p><a href=http://starspress.org/news/m-780407>火星移民登记正式对公众开放</a> 2078.4.7</p>
 <p><a href=http://starspress.org/news/m-020620>四大商会合并</a> 2102.6.20</p>
