--- a/archived-news/index.html
+++ b/archived-news/index.html
@@ -87,13 +87,14 @@
 <ul>
 <li>点击文章名即可跳转至相关页面</li>
 </ul>
-<p><a href=https://starspress.org/news/m-571122/ title="联合小行星垄断行径遭曝光： UAI恐陷入信誉危机">联合小行星垄断行径遭曝光： UAI恐陷入信誉危机</a> 2057.11.22</p>
-<p><a href=https://starspress.org/news/m-620723/ title=联合国决定成立星际移民局>联合国决定成立星际移民局</a> 2062.7.23</p>
+<p><a href=https://starspress.org/news/m-571122/>联合小行星垄断行径遭曝光： UAI恐陷入信誉危机</a> 2057.11.22</p>
+<p><a href=https://starspress.org/news/m-620723/>联合国决定成立星际移民局</a> 2062.7.23</p>
 <p><a href=http://starspress.org/news/m-780407>火星移民登记正式对公众开放</a> 2078.4.7</p>
 <p><a href=http://starspress.org/news/m-020620>四大商会合并</a> 2102.6.20</p>
 <p><a href=http://starspress.org/news/b-331226>简讯：罗马教宗访问伊希地，并发表演讲</a> 2133.12.26</p>
 <p><a href=http://starspress.org/news/m-560215>尘暴“子午线”仍在继续，搜救工作正紧密进行</a> 2156.2.15</p>
 <p><a href=http://starspress.org/news/m-660711>奇点城管理局提出建议，推动器官农场合法化</a> 2166.7.11</p>
+<p><a href=https://starspress.org/news/m-060311/>星际解密曝光联合行星贪污行为</a> 2166.3.11</p>
 </div>
 </div>
 </div>
