--- a/draft/index.html
+++ b/draft/index.html
@@ -107,6 +107,10 @@
 <p>在战争中，地球大多数政权一直保持着观望态度。</p>
 <h3 id=星际移民局iia>星际移民局（IIA）</h3>
 <p>面对这次史无前例的冲突，IIA 陷入了一个极其尴尬的地位。一方面，IIA 在暗地上接受着UPI 的资金技术援助；另一方面，IIA 在火星的工作受到了火星政府的鼎力支持；而作为它形式上的上级，联合国则一直严守着中立的底线。</p>
+<hr>
+<h3 id=todo>Todo:</h3>
+<p>1.写完设定&mldr;..
+2.天钩 Sky-hook 说不定有什么用</p>
 </div>
 </div>
 </div>
