--- a/draft/index.html
+++ b/draft/index.html
@@ -109,8 +109,8 @@
 <p>面对这次史无前例的冲突，IIA 陷入了一个极其尴尬的地位。一方面，IIA 在暗地上接受着UPI 的资金技术援助；另一方面，IIA 在火星的工作受到了火星政府的鼎力支持；而作为它形式上的上级，联合国则一直严守着中立的底线。</p>
 <hr>
 <h3 id=todo>Todo:</h3>
-<p>1.写完设定&mldr;..
-2.天钩 Sky-hook 说不定有什么用</p>
+<p>1.写完设定&mldr;..</p>
+<p>2.天钩 Sky-hook 说不定有什么用</p>
 </div>
 </div>
 </div>
