--- a/draft/index.html
+++ b/draft/index.html
@@ -96,7 +96,7 @@
 <p>这些来自地球物美价廉的商品的竞争力是火星本土商品所不可比拟的。地球商品占据了火星绝大部分的市场份额，极大地威胁了新生火星资产阶级的地位。渴望打破地球的垄断地位，进一步发展经济、开拓市场的火星资产阶级不满于受地球商会的打压。████年，A、B、C等火星的大型企业发表联合声明，要求火星当局立刻采取措施，提高关税以保护刚刚萌芽的火星经济。次年，火星商业联合会成立（ Mars General Chamber of Commerce, MGCC ），旨在维护火星企业的利益。在 MGCC 的压力下，火星当局通过了新的关税调整法案。此举引起了地球各商会及各国政府的不满。地球与火星间的矛盾开始显现，且愈演愈烈。</p>
 <h2 id=剑拔弩张>剑拔弩张</h2>
 <p>████年，来自火星的一支运输船队在地火航线上遭遇了太空海盗的袭击。海盗从船队正前方出现，试图以此逼停船队。船队立刻采取了相应的反击。然而，在船队的反击过程中，一艘太空驱逐舰击中了相反航线上的一支从属于联合行星（UPI）的货船 。三方在地火航线上爆发了一场小规模的军事冲突。之后，火星船队以“遇到不明势力袭击”的理由火星方面求援，冲突出现扩大化趋势。</p>
-<p>收到请求援助的消息后，火星方面立刻联络地球 ，确认另一方的身份，并要求支援船队除自卫需要外避免武力冲突，随后立刻与UPI 展开谈判。时任火星执政官立刻出面，呼吁UPI 停止对火星船队的攻击。可是，火星并没能得到来自UPI 合理的回应。次个地球日，UPI 凭借自己富可敌国的经济实力和政治影响力，提出了<strong>严惩火星抓获的海盗及火星船队中主张攻击的个人</strong>，<strong>火星政府降低对地关税</strong>，<strong>给予UPI 和其他地球企业在视界、星空两座大型星港的优惠政策</strong>等要求。火星拒绝了这一提案。地球上的半个月后，UPI 以此次冲突为由，强行控制了 MGCC 设在日-火拉格朗日L1点上的天文观测站。火星军队同时迅速做出了反应，决定向UPI 作战。太阳系数十亿年来的宁静被这无声有形炮火撕破。</p>
+<p>收到请求援助的消息后，火星方面立刻联络地球 ，确认另一方的身份，并要求支援船队除自卫需要外避免武力冲突，随后立刻与UPI 展开谈判。时任火星执政官立刻出面，呼吁UPI 停止对火星船队的攻击。可是，火星并没能得到来自UPI 合理的回应。次个地球日，UPI 凭借自己富可敌国的经济实力和政治影响力，提出了<strong>严惩火星抓获的海盗及火星船队中主张攻击的个人</strong>，<strong>火星政府降低对地关税</strong>，<strong>给予UPI 和其他地球企业在视界、星空两座大型星港的优惠政策</strong>等要求。火星拒绝了这一提案。地球上的半个月后，UPI 以此次冲突为由，强行控制了 MGCC 设在日-火拉格朗日L1点上的天文观测站。火星军队同时迅速做出了反应，决定向UPI 作战。太阳系数十亿年来的宁静被这有形无声的炮火撕破。</p>
 <h2 id=战时的多方势力>战时的多方势力</h2>
 <h3 id=联合行星upi>联合行星（UPI）</h3>
 <p>早在太空产业化的初期，UPI凭借着其对近地太空的垄断就已经在地球获得了举足轻重的地位。尤其在2062 年，由UPI 实际资助的星际移民局（IIA）成立后，UPI 在火星事务上也获得了几乎绝对的话语权。</p>
