--- a/draft/index.html
+++ b/draft/index.html
@@ -92,7 +92,7 @@
 <h2 id=矛盾初现>矛盾初现</h2>
 <p>相对于地球，火星一直是一个较为独立的政治、经济实体。丰富的矿产资源和大面积尚未开发的处女地为火星工商业发展提供了丰富的养料。火星地球化以来，火星的生态环境得到了飞跃式改善。全球性宜居的环境生态条件下，旧的城市规模得以不断扩大，同时一座座新的城市拔地而起。一个又一个集中而开放的城市代替了曾经封闭又寥若晨星的火星城，成为了火星工商业的温床。</p>
 <p>火星移民的前中期，建设火星的重任一直由地球企业担负着。受不同商会控制的地球企业把持火星经济的命脉，火星的经济发展因此受到严重阻碍。火星地球化期间，出于管理便利，许多地球商会决定给予位于火星的地球企业相对独立的自主经营权。随着时间的流逝，这一类企业也逐渐摆脱了地球的控制，扎根于火星的土壤，成为火星经济社会发展的重要力量。而借着地球化的春风，许多火星本土企业蓬勃发展并得以壮大。这些企业在当地拥有了不容小觑的话语权。</p>
-<p>地球化后的火星成为许多人们理想中的家园。越来越多的人选择带上家人一同定居火星。火星的市场以空前的速度不断扩大。而在地球，尽管自动化生产得到极大的普及，人类仍没有驱赶走徘徊在资本主义世界上空的那只名为"生产过剩"的幽灵。当所有人都认为平静的生活将会继续平静下去的时候，似乎没有人预料到下一次大危机已经开始酝酿，并逐渐成型。突如其来的经济危机下，面对数之不尽的失业人口和堆积成山的过剩商品，地球的资产阶级不得不采取措施以倾销商品、缓解危机。他们注意到了正处于上升阶段的火星市场。</p>
+<p>地球化后的火星成为许多人们理想中的家园。越来越多的人选择带上家人一同定居火星。火星的市场以空前的速度不断扩大。而在地球，尽管自动化生产得到极大的普及，人类仍没有驱赶走徘徊在资本主义世界上空的那只名为"生产过剩"的幽灵。当所有人都认为平静的生活将会继续平静下去的时候，似乎没有人预料到下一次大危机已经开始酝酿，并逐渐成型。突如其来的经济危机下，面对数之不尽的失业人口和堆积成山的过剩商品，地球的企业主们不得不采取措施以倾销商品、缓解危机。他们注意到了正处于上升阶段的火星市场。</p>
 <p>这些来自地球物美价廉的商品的竞争力是火星本土商品所不可比拟的。地球商品占据了火星绝大部分的市场份额，极大地威胁了新生火星资产阶级的地位。渴望打破地球的垄断地位，进一步发展经济、开拓市场的火星资产阶级不满于受地球商会的打压。████年，A、B、C等火星的大型企业发表联合声明，要求火星当局立刻采取措施，提高关税以保护刚刚萌芽的火星经济。次年，火星商业联合会成立（ Mars General Chamber of Commerce, MGCC ），旨在维护火星企业的利益。在 MGCC 的压力下，火星当局通过了新的关税调整法案。此举引起了地球各商会及各国政府的不满。地球与火星间的矛盾开始显现，且愈演愈烈。</p>
 <h2 id=剑拔弩张>剑拔弩张</h2>
 <p>████年，来自火星的一支运输船队在地火航线上遭遇了太空海盗的袭击。海盗从船队正前方出现，试图以此逼停船队。船队立刻采取了相应的反击。然而，在船队的反击过程中，一艘太空驱逐舰击中了相反航线上的一支从属于联合行星（UPI）的货船 。三方在地火航线上爆发了一场小规模的军事冲突。之后，火星船队以“遇到不明势力袭击”的理由火星方面求援，冲突出现扩大化趋势。</p>
@@ -112,7 +112,7 @@
 <h3 id=todo>Todo:</h3>
 <p>1.写完设定&mldr;..（esp. 战斗过程）</p>
 <p>2.天钩 Sky-hook 说不定有什么用</p>
-<p>***<br></p>
+<hr>
 <p><img src=/images/img-0275.png alt></p>
 <p><img src=/images/img-0276.png alt></p>
 <p><img src=/images/img-0277.png alt></p>
