--- a/draft/index.html
+++ b/draft/index.html
@@ -12,7 +12,7 @@
 <meta property="og:description" content="地球是人类的摇篮，但人类不可能永远被束缚在摇篮里。
 ———— 齐奥尔科夫斯基(1857 - 1935)
  矛盾初现 相对于地球，火星一直是一个较为独立的政治、经济实体。丰富的矿产资源和大面积尚未开发的处女地为火星工商业发展提供了丰富的养料。火星地球化以来，火星的生态环境得到了飞跃式改善。全球性宜居的环境生态条件下，旧的城市规模得以不断扩大，同时一座座新的城市拔地而起。一个又一个集中而开放的城市代替了曾经封闭又寥若晨星的火星城，成为了火星工商业的温床。
-火星移民的前中期，建设火星的重任一直由地球企业担负着。受不同商会控制的地球企业把持火星经济的命脉，火星的经济发展因此受到严重阻碍。火星地球化期间，出于管理便利，许多地球商会决定给予位于火星的地球企业相对独立的自主经营权。随着时间的流逝，这一类企业也逐渐摆脱了地球的控制，扎根于火星的土壤，成为火星经济社会发展的重要力量。而借着地球化的春风，许多火星本土企业蓬勃发展并得以壮大。这些企业在当地拥有了不容小觑的话语权。">
+火星移民的前中期，建设火星的重任一直由地球企业担负着。受不同商会控制的地球企业把持火星经济的命脉，火星的经济发展因此受到严重阻碍。火星地球化期间，出于管理便利，许多地球商会决定给予位于火星的地球企业相对独立的自主经营权。随着时间的流逝，这一类企业也逐渐摆脱了地球的控制，扎根于火星的土壤，成为火星经济社会发展的重要力量。而借着地球化的春风，许多火星本土企业蓬勃发展并愈法壮大。这些企业在当地拥有了不容小觑的话语权。">
 <meta property="og:type" content="article">
 <meta property="og:url" content="/draft/"><meta property="article:section" content>
 <link rel=preconnect href=https://fonts.gstatic.com>
@@ -89,26 +89,31 @@
 <p>地球是人类的摇篮，但人类不可能永远被束缚在摇篮里。</p>
 <p>———— 齐奥尔科夫斯基(1857 - 1935)</p>
 </blockquote>
-<h2 id=矛盾初现>矛盾初现</h2>
+<h3 id=矛盾初现>矛盾初现</h3>
 <p>相对于地球，火星一直是一个较为独立的政治、经济实体。丰富的矿产资源和大面积尚未开发的处女地为火星工商业发展提供了丰富的养料。火星地球化以来，火星的生态环境得到了飞跃式改善。全球性宜居的环境生态条件下，旧的城市规模得以不断扩大，同时一座座新的城市拔地而起。一个又一个集中而开放的城市代替了曾经封闭又寥若晨星的火星城，成为了火星工商业的温床。</p>
-<p>火星移民的前中期，建设火星的重任一直由地球企业担负着。受不同商会控制的地球企业把持火星经济的命脉，火星的经济发展因此受到严重阻碍。火星地球化期间，出于管理便利，许多地球商会决定给予位于火星的地球企业相对独立的自主经营权。随着时间的流逝，这一类企业也逐渐摆脱了地球的控制，扎根于火星的土壤，成为火星经济社会发展的重要力量。而借着地球化的春风，许多火星本土企业蓬勃发展并得以壮大。这些企业在当地拥有了不容小觑的话语权。</p>
-<p>地球化后的火星成为许多人们理想中的家园。越来越多的人选择带上家人一同定居火星。火星的市场以空前的速度不断扩大。而在地球，尽管自动化生产得到极大的普及，人类仍没有驱赶走徘徊在资本主义世界上空的那只名为"生产过剩"的幽灵。当所有人都认为平静的生活将会继续平静下去的时候，似乎没有人预料到下一次大危机已经开始酝酿，并逐渐成型。突如其来的经济危机下，面对数之不尽的失业人口和堆积成山的过剩商品，地球的企业主们不得不采取措施以倾销商品、缓解危机。他们注意到了正处于上升阶段的火星市场。</p>
-<p>这些来自地球物美价廉的商品的竞争力是火星本土商品所不可比拟的。地球商品占据了火星绝大部分的市场份额，极大地威胁了新生火星资产阶级的地位。渴望打破地球的垄断地位，进一步发展经济、开拓市场的火星资产阶级不满于受地球商会的打压。████年，A、B、C等火星的大型企业发表联合声明，要求火星当局立刻采取措施，提高关税以保护刚刚萌芽的火星经济。次年，火星商业联合会成立（ Mars General Chamber of Commerce, MGCC ），旨在维护火星企业的利益。在 MGCC 的压力下，火星当局通过了新的关税调整法案。此举引起了地球各商会及各国政府的不满。地球与火星间的矛盾开始显现，且愈演愈烈。</p>
-<h2 id=剑拔弩张>剑拔弩张</h2>
-<p>████年，来自火星的一支运输船队在地火航线上遭遇了太空海盗的袭击。海盗从船队正前方出现，试图以此逼停船队。船队立刻采取了相应的反击。然而，在船队的反击过程中，一艘太空驱逐舰击中了相反航线上的一支从属于联合行星（UPI）的货船 。三方在地火航线上爆发了一场小规模的军事冲突。之后，火星船队以“遇到不明势力袭击”的理由火星方面求援，冲突出现扩大化趋势。</p>
-<p>收到请求援助的消息后，火星方面立刻联络地球 ，确认另一方的身份，并要求支援船队除自卫需要外避免武力冲突，随后立刻与UPI 展开谈判。时任火星执政官立刻出面，呼吁UPI 停止对火星船队的攻击。可是，火星并没能得到来自UPI 合理的回应。次个地球日，UPI 凭借自己富可敌国的经济实力和政治影响力，提出了<strong>严惩火星抓获的海盗及火星船队中主张攻击的个人</strong>，<strong>火星政府降低对地关税</strong>，<strong>给予UPI 和其他地球企业在视界、星空两座大型星港的优惠政策</strong>等要求。火星拒绝了这一提案。地球上的半个月后，UPI 以此次冲突为由，强行控制了 MGCC 设在日-火拉格朗日L1点上的天文观测站。火星军队同时迅速做出了反应，决定向UPI 作战。太阳系数十亿年来的宁静被这有形无声的炮火撕破。</p>
+<p>火星移民的前中期，建设火星的重任一直由地球企业担负着。受不同商会控制的地球企业把持火星经济的命脉，火星的经济发展因此受到严重阻碍。火星地球化期间，出于管理便利，许多地球商会决定给予位于火星的地球企业相对独立的自主经营权。随着时间的流逝，这一类企业也逐渐摆脱了地球的控制，扎根于火星的土壤，成为火星经济社会发展的重要力量。而借着地球化的春风，许多火星本土企业蓬勃发展并愈法壮大。这些企业在当地拥有了不容小觑的话语权。</p>
+<p>地球化后的火星成为许多人们理想中的家园。越来越多的人选择带上家人一同定居火星。火星的市场以空前的速度不断扩大。而在地球，尽管自动化生产得到极大的普及，人类仍没有驱赶走徘徊在世界上空的那只名为"生产过剩"的幽灵。当所有人都认为平静的生活将会继续平静下去的时候，似乎没有人预料到下一次大危机已经开始酝酿，并逐渐成型。突如其来的经济危机下，面对数之不尽的失业人口和堆积成山的过剩商品，地球的企业不得不采取措施以倾销商品、缓解危机。他们注意到了正处于上升阶段的火星市场。</p>
+<p>这些来自地球物美价廉的商品的竞争力是火星本土商品所不可比拟的。地球商品占据了火星绝大部分的市场份额，极大地威胁了火星新生企业的地位。渴望打破地球的垄断地位，进一步发展经济、开拓市场的火星企业主们不满于受地球商会的打压，贸易保护主义盛行。2467年，数个火星的大型企业发表联合声明，要求火星当局立刻采取措施，提高关税以保护刚刚萌芽的火星经济。次年，火星商业联合会成立（ Mars General Chamber of Commerce, MGCC ），旨在维护火星本土企业的利益。在 MGCC 的压力下，火星当局通过了新的关税调整法案。此举引起了地球各商会的不满。地球与火星间的矛盾开始显现，且愈演愈烈。</p>
+<h3 id=剑拔弩张>剑拔弩张</h3>
+<p>2529年，来自火星的一支运输船队在地火航线上遭遇了太空海盗的袭击。海盗从船队正前方出现，试图以此逼停船队。船队立刻采取了相应的反击。然而，在船队的反击过程中，一艘太空驱逐舰击中了相反航线上的一支从属于联合行星（ UPI ）的货船 。三方在地火航线上爆发了一场小规模的军事冲突。之后，火星船队以“遇到不明势力袭击”的理由火星方面求援，冲突出现扩大化趋势。</p>
+<p>收到请求援助的消息后，火星方面立刻联络地球 ，确认另一方的身份，并要求支援船队除自卫需要外避免武力冲突，随后立刻与 UPI 展开谈判。时任火星执政官立刻出面，呼吁UPI 停止对火星船队的攻击。可是，火星并没能得到来自 UPI 合理的回应。次个地球日，UPI 凭借自己富可敌国的经济实力和政治影响力，提出了<strong>严惩火星抓获的海盗及火星船队中主张攻击的个人</strong>，<strong>火星政府降低对地关税</strong>，<strong>给予UPI 和其他地球企业在视界、星空两座大型星港的优惠政策</strong>等要求。火星拒绝了这一提案。地球上的半个月后，UPI 以此次冲突为由，强行控制了 MGCC 设在日-火拉格朗日L1点上的天文观测站。火星军队同时迅速做出了反应，决定向 UPI 作战。太阳系数十亿年来的宁静被这有形无声的炮火撕破。</p>
 <h2 id=战时的多方势力>战时的多方势力</h2>
-<h3 id=联合行星upi>联合行星（UPI）</h3>
-<p>早在太空产业化的初期，UPI凭借着其对近地太空的垄断就已经在地球获得了举足轻重的地位。尤其在2062 年，由UPI 实际资助的星际移民局（IIA）成立后，UPI 在火星事务上也获得了几乎绝对的话语权。</p>
-<h3 id=火星>火星</h3>
-<p>身为战争的直接受害者，火星方面一直在避免冲突的发生。在22世纪中期，出于自卫需要，火星各城建立起了独立于各个势力的武装力量。数百年火星的工业积累和地球化以来经济的迅速发展给火星带来了极大的机遇。火星迅速建立起一支强大的军队。尽管如此，火星仍然无法完全摆脱地球的阴霾。在与UPI 的实力对比中，火星处于相对劣势。</p>
-<p>在地火航线冲突爆发的消息传到地火两星后，除了火星与UPI 的官方谈判外，火星各界以及许多旅居地球的火星人士也试图游说地球上的各股势力，试图避免此次冲突扩大。令人惋惜的是，他们的努力随着谈判的破裂而破灭。</p>
-<h3 id=地球>地球</h3>
+<h4 id=联合行星upi>联合行星（UPI）</h4>
+<p>早在太空产业化的初期，UPI 凭借着其对近地太空的垄断就已经在地球获得了举足轻重的地位。尤其在2062 年，由 UPI 实际资助的星际移民局（ IIA ）成立后， UPI 在火星事务上也获得了几乎绝对的话语权。从23世纪中期开始， UPI 将其太空业务的重心转移至对太阳系其他天体的开发中。在这一阶段， UPI 获得了全太阳系近四成可利用的小行星的开发权。随着其业务的不断扩大， UPI 逐步成长为一个甚至能与部分地球国家平起平坐的庞大的政治经济实体。尽管不被社会所普遍承认，但 UPI 无疑成为了一支可以左右人类社会发展的可怖力量。</p>
+<p>UPI 在整个太阳系都有着举足轻重的地位，但由于其并不对任何殖民地享有主权，UPI 无权直接从社会上直接招募武装人员。因此， UPI 在前线的士兵多数都是从私人军事公司高价招聘的雇佣兵。这些雇佣兵为 UPI 服役只是利益使然，虽训练有素，但缺乏严明的纪律和统一的领导，最终导致了 UPI 的失败。</p>
+<h4 id=火星>火星</h4>
+<p>身为战争的直接受害者，火星方面一直在避免冲突的发生。在22世纪中期，出于自卫需要，火星各城建立起了独立于各个势力的武装力量。数百年火星的工业积累和地球化以来经济的迅速发展给火星带来了极大的机遇。火星迅速建立起一支强大的军队。尽管如此，火星仍然无法完全摆脱地球的阴霾。在与 UPI 的实力对比中，火星处于相对劣势。</p>
+<p>在地火航线冲突爆发的消息传到地火两星后，除了火星与 UPI 的官方谈判外，火星各界以及许多旅居地球的火星人士也试图游说地球上的各股势力，试图避免此次冲突扩大。他们的努力随着谈判的破裂而破灭。</p>
+<p>为了应对来自 UPI 的威胁，火星扶持了一大批重工尤其军工企业，同时也加大了在前沿应用科学领域的投入，以此缓解火星在战场上的被动局面。这些企业在战后的系外探索中做出了巨大贡献。</p>
+<h4 id=地球>地球</h4>
 <p>在战争中，地球大多数政权一直保持着观望态度。UPI 富可敌国的体量与火星当局在地球巨大的影响力使得小国畏于表达自身在此次战争中的立场；而包括欧洲联盟在内的几大超级大国却一致地保持沉默，同时向参战双方提供物资技术支持以从中获利。</p>
-<h3 id=星际移民局iia>星际移民局（IIA）</h3>
-<p>面对这次史无前例的冲突，IIA 陷入了一个极其尴尬的地位。一方面，IIA 在暗地上接受着UPI 的资金技术援助；另一方面，IIA在火星的工作受到了火星当局的鼎力支持；而作为它形式上的上级，联合国则一直严守着中立的底线。经过剧烈的内部派系斗争，</p>
-<h3 id=太阳系其他殖民地>太阳系其他殖民地</h3>
-<hr>
+<h4 id=星际移民局iia>星际移民局（IIA）</h4>
+<p>面对这次史无前例的冲突，IIA 陷入了一个极其尴尬的地位。一方面，IIA 在暗地上接受着UPI 的资金技术援助；另一方面，IIA 在火星的工作受到了火星政府的鼎力支持；而作为它形式上的上级，联合国则一直严守着中立的底线。因此，IIA 不得不试图迎合各方，在不同势力的夹缝中谋取生路。</p>
+<p>战争期间， IIA 内部的派系矛盾也愈发激烈。一部分人认为，战时 IIA 处理对外关系的首要原则应该是明哲保身，避免站队冲突中的任何一方，保证 IIA 的利益最大化。而另一派选择了他们的理想。 IIA 在██世纪公布了下一阶段的发展计划，决定投入大量资金进行系外天体探索。这些人为了计划的稳步实施，主张调和地火间的矛盾，团结人类在全太阳系的力量。</p>
+<h4 id=太阳系其他殖民地>太阳系其他殖民地</h4>
+<h3 id=地火议和与拉格朗日公约的签订>地火议和与《拉格朗日公约》的签订</h3>
+<h4 id=heading></h4>
+<h2 id=自一战失利以来-upi-内部的反战情绪日益增长而前线的雇佣兵不再愿为-upi-卖命军心涣散财政上的连年赤字更加加重了后勤的负担此外由于战争期间地火贸易额大幅下降作为战争发起者的-upi-遭到了国际社会的一致声讨在这种内外交困的情形下年月日-upi-正式向火星递交投降书>自████一战失利以来， UPI 内部的反战情绪日益增长。而前线的雇佣兵不再愿为 UPI 卖命，军心涣散。财政上的连年赤字更加加重了后勤的负担。此外，由于战争期间地火贸易额大幅下降，作为战争发起者的 UPI 遭到了国际社会的一致声讨。在这种内外交困的情形下，████年█月█日， UPI 正式向火星递交投降书。</h2>
 <h3 id=todo>Todo:</h3>
 <p>1.写完设定&mldr;..（esp. 战斗过程）</p>
 <p>2.天钩 Sky-hook 说不定有什么用</p>
